@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*old ebuilds removed (25 Jan 2013)
+	23 Jan 2013; Andre Erdmann <dywi@mailerd.de> tpacpi-bat-2011.ebuild :
+
+	ebuild removed as announced in package.mask
+
 *tpacpi-bat-2011-r1 (07 Jan 2013)
 	07 Jan 2013; Andre Erdmann <dywi@mailerd.de> tpacpi-bat-2011-r1.ebuild :
 
